--- a/app/src/main/res/drawable/modal_hora.xml
+++ b/app/src/main/res/drawable/modal_hora.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-
     <gradient
         android:startColor="@color/blue1"
         android:endColor="@color/blue2"
         />
     <corners
         android:bottomRightRadius="15dp"
-        android:topRightRadius="15dp"
-        />
-
+        android:topRightRadius="15dp" />
 </shape>
