--- a/app/src/main/res/layout/activity_pagamento_convenio.xml
+++ b/app/src/main/res/layout/activity_pagamento_convenio.xml
@@ -137,7 +137,7 @@
 
     <View
         android:id="@+id/containerModal"
-        style="@style/ContainerWhite"
+        style="@style/ContainerWhite2"
         android:layout_marginHorizontal="80dp"
         android:layout_marginTop="80dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -175,7 +175,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnSim"
-        style="@style/ButtonConfirm"
+        style="@style/ButtonConfirm2"
         android:layout_width="500dp"
         android:layout_height="100dp"
         android:layout_marginTop="230dp"
