--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="ContainerComponents">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">150dp</item>
+        <item name="android:background">@drawable/header</item>
+    </style>
+
     <style name="HeaderCPF">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">120dp</item>
@@ -9,12 +15,33 @@
 
     <style name="ContainerWhite">
         <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">380dp</item>
+        <item name="android:background">@drawable/backgroud_white</item>
+        <item name="android:layout_marginTop">100dp</item>
+        <item name="android:layout_marginLeft">40dp</item>
+        <item name="android:layout_marginRight">40dp</item>
+        <item name="android:padding">50dp</item>
+    </style>
+
+    <style name="ContainerWhite2">
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">440dp</item>
         <item name="android:background">@drawable/background_white</item>
         <item name="android:layout_marginTop">100dp</item>
         <item name="android:layout_marginLeft">40dp</item>
         <item name="android:layout_marginRight">40dp</item>
         <item name="android:padding">50dp</item>
+    </style>
+
+    <style name="Edit_Text">
+        <item name="android:layout_width">800dp</item>
+        <item name="android:layout_height">100dp</item>
+        <item name="android:padding">20dp</item>
+        <item name="android:background">@drawable/edit_text</item>
+        <item name="android:maxLength">11</item>
+        <item name="android:layout_marginLeft">70dp</item>
+        <item name="android:layout_marginRight">70dp</item>
+        <item name="android:layout_marginTop">100dp</item>
     </style>
 
     <style name="Button">
@@ -74,6 +101,18 @@
     </style>
 
     <style name="ButtonConfirm">
+        <item name="android:layout_width">1100dp</item>
+        <item name="android:layout_height">150dp</item>
+        <item name="android:background">@drawable/btn_confirm</item>
+        <item name="android:layout_marginLeft">40dp</item>
+        <item name="android:layout_marginRight">40dp</item>
+        <item name="android:layout_marginTop">30dp</item>
+        <item name="android:padding">20dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="ButtonConfirm2">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">150dp</item>
         <item name="android:background">@drawable/btn_confirm</item>
