--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#F0F0F0</color>
-    <color name="white2">#FFFFF</color>
+    <color name="white2">#FFFFFF</color>
     <color name="blue1">#061F89</color>
     <color name="blue2">#2233AB</color>
     <color name="blue3">#3E58C8</color>
